# discord-cosmos-bot

./: Cargo.toml
db/: db  snap.00000000000000C7
src/: main.rs  shared.rs
